<resources>
    <string name="app_name" translatable="false">ProjectHelper</string>
    <string name="next">Next</string>
    <string name="welcome_text">Welcome! This app will help you with your projects! Press "Next" button to pass the initial setup phase</string>
    <string name="first_let_s_create_account">First, let\'s create account</string>
    <string name="enter_your_login_or_email">Your login or Email</string>
    <string name="your_password">Your password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_have_account">I have account</string>
    <string name="i_have_not_account">I haven\'t account</string>
    <string name="it_s_time_for_questions_and_prefers">It\'s time for questions and prefers!</string>
    <string name="which_pls_do_you_use">Which PLs do you use?</string>
    <string name="now_choose_your_theme">Now choose your theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="as_in_system">As in system</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="ideas">Ideas</string>
    <string name="roadmap">Roadmap</string>
    <string name="main_settings">Main Settings</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="goto_profile_settings"><![CDATA[Goto profile settings ->]]></string>
    <string name="appearance">Appearance</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback">Feedback</string>
    <string name="avatar">Avatar</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="saturation">Saturation</string>
    <string name="display_scroll_bars">Display scroll bars</string>
    <string name="use_sounds">Use sounds</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="summarize_your_feedback">Summarize your feedback</string>
    <string name="explain_it">Explain it</string>
    <string name="back">back</string>
    <string name="you_can_rate_this_app">You can rate this app</string>
    <string name="rate">Rate</string>
    <string name="we_re_thank_you_for_your_feedback">We\'re thank you for your feedback</string>
    <string name="back_2">Back</string>
    <string name="oops_there_are_some_problems">Oops! There are some problems</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="sample_email" translatable="false">mail.sample@gmail.com</string>
    <string name="change_email">Change Email</string>
    <string name="password_personal_code"><![CDATA[Password & personal code]]></string>
    <string name="select_action">Select action</string>
    <string name="change_password">Change password</string>
    <string name="change_personal_code">Change personal code</string>
    <string name="log_out_of_your_account">Log out of your account</string>
    <string name="delete_account">Delete account</string>
    <string name="reset_settings">Reset settings</string>
    <string name="forgot_password_no_problem_follow_the_instruction">Forgot password? No problem! Follow the instruction</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="your_email">Your Email</string>
    <string name="or_enter_your_personal_code">Or enter your personal code</string>
    <string name="personal_code">Personal code</string>
    <string name="changing_email">Changing Email</string>
    <string name="first_enter_your_new_email_address">First, enter your new Email address</string>
    <string name="new_email">New Email</string>
    <string name="go_back">Go back</string>
    <string name="almost_done_enter_the_5_digit_code_that_will_arrive_in_your_inbox_soon">Almost done! Enter the 5-digit code that will arrive in your inbox soon</string>
    <string name="changing_password">Changing password</string>
    <string name="changing_personal_code">Changing personal code</string>
    <string name="do_you_want_personal_code_follow_the_instruction">Do you want to change a personal code? Follow the instruction</string>
    <string name="default_elevation" translatable="false">10dp</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="i_m_forgot_my_password">I\'m forgot my password…</string>
    <string name="select_at_least_one_pl">Choose at least one programming language from the offered. This is necessary to complete the initial setup</string>
    <string name="an_exception_has_occurred">An exception has occurred</string>
    <string name="well_lets_log_in">Well, then let’s log in</string>
    <string name="fill_in_this_field">Fill in this field</string>
    <string name="rate_this_app_using_slider">Rate app using slider</string>

    <string name="create_road_map">Create road map</string>
    <string name="remove_road_map">Remove road map</string>
    <string name="about_app">About app</string>
    <string name="rate_app">Rate app</string>
    <string name="change_theme">Change theme</string>
    <string name="sounds">Sounds</string>
    <string name="news_and_facts">News &amp; Facts</string>
    <string name="recommended">Recommended</string>
    <string name="change_password_or_personal_code">Change password | personal code</string>
    <string name="change_login">Change login</string>
    <string name="log_out">Log out</string>
    <string name="account_settings">Account settings</string>
    <string name="appearance_settings">Appearance settings</string>
    <string name="ratings">Ratings</string>
    <string name="chat_settings">Chat settings</string>
    <string name="ok">OK</string>
    <string name="account_deleting_confirm">Do you really want to delete your account?</string>
    <string name="app_version">Version: </string>
    <string name="app_build">Build: </string>
    <string name="app_developer">Developer: </string>
    <string name="settings_app_name">App name: </string>
</resources>