<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    tools:context=".activities.InitialSetupThirdActivity"
    android:background="@color/background">

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:alpha="100"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:soundEffectsEnabled="true"
        android:text="@string/next"
        android:elevation="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themesRadioGroup"
        app:layout_constraintVertical_bias="0.902" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/it_s_time_for_questions_and_prefers"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/now_choose_your_theme"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plsScrollView" />

    <ScrollView
        android:id="@+id/plsScrollView"
        android:layout_width="291dp"
        android:layout_height="393dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/scroll_view_bg"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="14dp"

                    android:text="@string/which_pls_do_you_use"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/themesRadioGroup"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#2C2C3C"
            android:buttonTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/light"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#2C2C3C"
            android:buttonTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dark"
            android:checked="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#2C2C3C"
            android:buttonTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/as_in_system"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>