<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".activities.initialSetup.InitialSetupSecondActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:elevation="10dp"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/first_let_s_create_account"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginOrEmailTextField"
        android:drawableStart="@drawable/login_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="224dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:background="@drawable/text_field_background"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="12sp"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:hint="@string/enter_your_login_or_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordField"
        android:drawableStart="@drawable/password_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="224dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:inputType="textPassword"
        android:background="@drawable/text_field_background"
        android:hint="@string/your_password"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginOrEmailTextField"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:alpha="100"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:soundEffectsEnabled="true"
        android:text="@string/next"
        android:elevation="@dimen/cardview_default_elevation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox" />

    <TextView
        android:id="@+id/iHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/i_have_account"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/gray"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/iForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:visibility="invisible"
        android:focusable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/i_m_forgot_my_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/iHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>